Made how it converts files more future proof Made it a bit more lenient with file names Added a convert button (select multiple files with ctrl-click or shift-click) Added a recycle .dat.old button Added checkboxes to toggle scanning workshop files/manual refresh Added a built-in editor Signed-off-by: ChoGGi <me@choggi.org>

--- a/DatFileConverter.ini
+++ b/DatFileConverter.ini
@@ -1,11 +1,15 @@
 [Settings]
 
-;Self-explanatory (I hope)
+;Leave blank to use built-in editor
 ;R:\SciTe\SciTeStart.exe
-Editor=Notepad.exe
+;Notepad.exe
+Editor=
 
-;Ask before recycling file on double right-click
-DisableWarnings=False
+;Ask before recycling files
+DisableWarnings=0
 
 ;If you have added a bunch of friends to share saves, then it could be a long list
-ScanSteamWorkshop=True
+ScanSteamWorkshop=1
+
+;If you don't want it to refresh the view after converting a file
+ManualRefresh=0
