--- a/DatFileConverter.ini
+++ b/DatFileConverter.ini
@@ -11,5 +11,5 @@ DisableWarnings=0
 ;If you have added a bunch of friends to share saves, then it could be a long list
 ScanSteamWorkshop=1
 
-;If you don't want it to refresh the view after converting a file
+;If you don't want it to refresh the view after deleting/converting files
 ManualRefresh=0
