Saves window position
Signed-off-by: ChoGGi <me@choggi.org>

--- a/DatFileConverter.ini
+++ b/DatFileConverter.ini
@@ -13,3 +13,6 @@ ScanSteamWorkshop=1
 
 ;If you don't want it to refresh the view after deleting/converting files
 ManualRefresh=0
+
+;Window Position
+WinPos=0:0
